clusters/easy-platform/infrastructure/mysql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-system
  labels:
    app.kubernetes.io/part-of: easy-platform
